@@ -1,0 +1,39 @@
+#!/bin/sh
+set -e
+
+# Copyright © 2013 Andreas Beckmann <anbe@debian.org>
+#
+# This program is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by the
+# Free Software Foundation; either version 2 of the License, or (at your
+# option) any later version.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
+# Public License for more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program; if not, write to the Free Software Foundation, Inc.,
+# 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+
+#
+# wrapper for running piuparts-master-backend without needing to know
+# anything about the master setup and paths
+#
+
+
+. @sharedir@/piuparts/lib/read_config.sh
+
+get_config_value PYTHONPATH global PYTHONPATH ''
+
+
+export PYTHONPATH
+
+section="$1"
+if [ -z "$section" ]; then
+	echo "FAIL: no section supplied"
+	exit 1
+fi
+
+@sharedir@/piuparts/piuparts-master-backend "$section"
